# conan

./: .gitignore  Cargo.toml  README.md
.github/: action.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  signature_request.md
.github/workflows/: ci.yml  release.yml
crates/conan-core/: Cargo.toml
crates/conan-core/src/: error.rs  event.rs  finding.rs  lib.rs  policy.rs  registry.rs  risk.rs  traits.rs
crates/conan-db/: Cargo.toml
crates/conan-db/src/: lib.rs  migrations.rs  store.rs
crates/conan-db/tests/: store.rs
crates/conan-net/: Cargo.toml
crates/conan-net/src/: capture.rs  connections.rs  dns.rs  lib.rs
crates/conan-os/: Cargo.toml
crates/conan-os/src/: browser.rs  codebase.rs  lib.rs  process.rs  shell.rs
crates/conan-os/tests/: codebase.rs
policy/: default.toml
signatures/: anthropic.yaml  azure-openai.yaml  cohere.yaml  google-ai.yaml  groq.yaml  huggingface.yaml  localai.yaml  mistral.yaml  ollama.yaml  openai.yaml  perplexity.yaml
src/: analyzer.rs  config.rs  diff.rs  main.rs  reporter.rs  sarif.rs  sig_updater.rs  webhook.rs
src/cli/: daemon_cmd.rs  doctor.rs  mod.rs  policy.rs  report.rs  scan.rs  service.rs  signatures.rs  status.rs
tests/: cli.rs
