[workspace]
members = [
    "crates/conan-core",
    "crates/conan-net",
    "crates/conan-os",
    "crates/conan-db",
    ".",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["conan contributors"]
license = "Apache-2.0"
repository = "https://github.com/thinkgrid-labs/conan.git"

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
# error handling
thiserror = "1"
anyhow = "1"
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# time
chrono = { version = "0.4", features = ["serde"] }
# regex
regex = "1"
# async traits
async-trait = "0.1"
# channels
tokio-stream = "0.1"
# ids
uuid = { version = "1", features = ["v4", "serde"] }
# test utilities
tempfile = "3"
# http client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[package]
name = "conan"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Detect, inspect, and govern AI service usage across your infrastructure."
keywords = ["security", "ai-governance", "dlp", "api-key-detection", "compliance"]
categories = ["command-line-utilities", "development-tools", "network-programming"]
homepage = "https://github.com/thinkgrid-labs/conan"

[[bin]]
name = "conan"
path = "src/main.rs"

[features]
# Enable live pcap capture (requires libpcap: apt install libpcap-dev / brew install libpcap).
# Build with: cargo build --features pcap-capture
pcap-capture = ["conan-net/capture"]

[dependencies]
conan-core = { path = "crates/conan-core" }
conan-net  = { path = "crates/conan-net" }
conan-os   = { path = "crates/conan-os" }
conan-db   = { path = "crates/conan-db" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
async-trait.workspace = true
regex.workspace = true
reqwest.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
