[package]
name = "conan-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits, types, and shared logic for conan."

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
regex.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile.workspace = true
